# CodexBar4Windows

./: .gitignore  BETA.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  version.env
apps/desktop-tauri/src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: commands.rs  credentials_detect.rs  first_run.rs  hotkey_commands.rs  launch_at_signin.rs  lib.rs  login_commands.rs  main.rs  notification_bridge.rs  perf.rs  secrets_commands.rs  tray_renderer.rs  tray_usage.rs  updater_commands.rs
apps/desktop-tauri/src-tauri/src/dev/: fixtures.rs  mod.rs
rust/: Cargo.toml
rust/benches/: render.rs
rust/crates/codexbar4windows-claude-watchdog/: Cargo.toml
rust/crates/codexbar4windows-claude-watchdog/src/: args.rs  job.rs  main.rs
rust/crates/codexbar4windows-claude-webprobe/: Cargo.toml
rust/crates/codexbar4windows-claude-webprobe/src/: endpoints.rs  main.rs  report.rs
rust/examples/: brave_smoke.rs  claude_oauth_smoke.rs  codex_manual_paste_smoke.rs  codex_oauth_smoke.rs  codex_web_smoke.rs
rust/src/: lib.rs
rust/src/cookies/: auto_import.rs  chromium.rs  detect.rs  errors.rs  firefox.rs  gate.rs  header_cache.rs  importer.rs  mod.rs  normalizer.rs
rust/src/core/: events.rs  mod.rs  paths.rs  refresh.rs  usage_store.rs
rust/src/cost/: aggregator.rs  claude_parser.rs  codex_parser.rs  dedup.rs  mod.rs  pi_parser.rs  pricing.rs  runtime.rs  storage.rs  walker.rs
rust/src/locale/: en.json  loader.rs  mod.rs
rust/src/logging/: mod.rs  redact.rs
rust/src/notifications/: mod.rs  state.rs  thresholds.rs  toast.rs  transition.rs
rust/src/projection/: codex.rs  mod.rs
rust/src/providers/: branding.rs  cli_config.rs  common_api.rs  contexts.rs  cookie_source.rs  descriptor.rs  errors.rs  fetch_context.rs  fetch_outcome.rs  fetch_plan_runtime.rs  identity.rs  implementation.rs  mod.rs  presentation.rs  registry.rs  settings_descriptor.rs  settings_snapshot.rs
rust/src/providers/augment/: mod.rs
rust/src/providers/claude/: descriptor.rs  errors.rs  mod.rs  models.rs  planner.rs  routing.rs  settings.rs  tokens.rs
rust/src/providers/claude/cli/: auto_responder.rs  mod.rs  parser.rs  pty_actor.rs  reset_parser.rs  strategy.rs
rust/src/providers/claude/oauth/: cache.rs  credentials.rs  mod.rs  response.rs  strategy.rs  transport.rs
rust/src/providers/claude/web/: cookie_cache.rs  endpoints.rs  mod.rs  org_selection.rs  strategy.rs  transport.rs
rust/src/providers/codebuff/: mod.rs
rust/src/providers/codex/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/codex/auth/: credentials.rs  dpapi_mirror.rs  errors.rs  identity.rs  jwt.rs  mod.rs  refresh.rs
rust/src/providers/codex/cli/: binary_locator.rs  conpty_transport.rs  mod.rs  rpc_client.rs  rpc_framer.rs  strategy.rs  tui_parser.rs  tui_strategy.rs
rust/src/providers/codex/history/: key.rs  mod.rs  ownership.rs
rust/src/providers/codex/managed/: catalog.rs  home_factory.rs  mod.rs
rust/src/providers/codex/oauth/: fallback.rs  mod.rs  strategy.rs  transport.rs  usage.rs  wham_response.rs
rust/src/providers/codex/promotion/: coordinator.rs  errors.rs  execution.rs  mod.rs  planning.rs  types.rs
rust/src/providers/codex/web/: account_jars.rs  cookie_resolver.rs  endpoints.rs  mod.rs  strategy.rs  text_parsing.rs
rust/src/providers/copilot/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/copilot/oauth/: device_flow.rs  device_flow_transport.rs  endpoints.rs  mod.rs  response.rs  strategy.rs  transport.rs
rust/src/providers/cursor/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/cursor/web/: endpoints.rs  fold.rs  mod.rs  response.rs  strategy.rs
rust/src/providers/deepseek/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/deepseek/api/: mod.rs  response.rs  strategy.rs  transport.rs
rust/src/providers/factory/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/factory/api/: mod.rs  response.rs  strategy.rs  transport.rs  workos_refresh.rs
rust/src/providers/gemini/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/gemini/oauth/: client_locator.rs  code_assist.rs  credentials.rs  jwt_claims.rs  mod.rs  response.rs  strategy.rs  token_refresh.rs  transport.rs
rust/src/providers/hello/: descriptor.rs  mod.rs  strategies.rs
rust/src/providers/kimi/: mod.rs
rust/src/providers/kimi_k2/: mod.rs
rust/src/providers/manus/: mod.rs
rust/src/providers/minimax/: mod.rs
rust/src/providers/mistral/: mod.rs
rust/src/providers/models/: credits.rs  mod.rs  provider_cost.rs  rate_window.rs  storage_footprint.rs  usage_snapshot.rs
rust/src/providers/moonshot/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/moonshot/api/: mod.rs  response.rs  strategy.rs  transport.rs
rust/src/providers/openai/: mod.rs
rust/src/providers/openrouter/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/openrouter/api/: mod.rs  response.rs  strategy.rs  transport.rs
rust/src/providers/venice/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/venice/api/: mod.rs  response.rs  strategy.rs  transport.rs
rust/src/providers/zai/: descriptor.rs  mod.rs  planner.rs  settings.rs
rust/src/providers/zai/api/: mod.rs  response.rs  strategy.rs  (+1 more)
rust/src/redact/: mod.rs  tracing_layer.rs
rust/src/renderer/: accent.rs  atlas.rs  bars.rs  brand.rs  cache.rs  canvas.rs  celebration.rs  frame_driver.rs  layout.rs  mod.rs  modifiers.rs  morph.rs  patterns.rs  pixel_grid.rs  popup_position.rs  popup_size.rs  state.rs  status_overlay.rs  style.rs  theme_detect.rs  tooltip.rs  twists.rs
rust/src/secrets/: blob_store.rs  dpapi.rs  errors.rs  keyring_store.rs  migration.rs  mod.rs  secure_file.rs  token_account.rs
rust/src/settings/: mod.rs  model.rs  store.rs
rust/src/status/: aggregator.rs  feed.rs  gws.rs  mod.rs  poller.rs  registry.rs  severity.rs  statuspage.rs  store.rs  transport.rs
(+150 files in other folders)
