[package]
name = "codexbar"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Shared core for CodexBar4Windows: providers, settings, secrets, refresh loop."

[lib]
name = "codexbar"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
