[package]
name = "codexbar"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Shared core for CodexBar4Windows: providers, settings, secrets, refresh loop."

[lib]
name = "codexbar"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
inventory = "0.3"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "sync", "rt", "time"] }
