[package]
name = "codexbar"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Shared core for CodexBar4Windows: providers, settings, secrets, refresh loop."

[lib]
name = "codexbar"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time"] }
inventory = "0.3"
regex = "1"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
aes-gcm = "0.10"
tempfile = "3"
tiny-skia = "0.11"
resvg = "0.45"
usvg = "0.45"
image = "0.25"
ico = "0.4"
lru = "0.13"
parking_lot = "0.12"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
portable-pty = "0.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
] }
winreg = "0.55"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "sync", "rt", "rt-multi-thread", "time"] }
criterion = "0.5"
wiremock = "0.6"
futures = "0.3"

[[bench]]
name = "render"
harness = false
