[package]
name = "codexbar4windows-desktop"
version = "1.0.0"
description = "CodexBar4Windows Tauri desktop shell."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
name = "codexbar4windows_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Phase 3 E4: rotates icon fixtures every 8 s for manual QA. Enable
# with `cargo run --features dev` from `apps/desktop-tauri/src-tauri/`.
dev = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
codexbar = { path = "../../../rust" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
async-trait = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "rt", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
