[package]
name = "codexbar4windows-claude-watchdog"
version = "1.0.0"
description = "Job Object babysitter for Claude CLI PTY child processes."
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "codexbar4windows-claude-watchdog"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Security",
] }
